# nesim

./: .gitignore  LICENSE  README.md  devices.py  input.txt  inst_parser.py  instructions.py  main.py  parser.py  pyproject.toml  simulation.py
docs/source/: conf.py  index.rst
docs/source/about/: about.rst
docs/source/api_ref/: api_ref.rst  devices.rst  inst_parser.rst  instructions.rst  simulation.rst
docs/source/api_ref/devices/: cable.rst  device.rst  devices.rst  host.rst  hub.rst  send_receiver.rst  switch.rst
docs/source/getting_started/: create_and_exec.rst  getting_started.rst  instructions.rst  load_instr.rst
docs/source/how_it_works/: classes.rst  devices.rst  how_it_works.rst  simulation.rst
examples/: example.py  script.txt
nesim/: __init__.py  __main__.py  devices.py  frame.py  inst_parser.py  instructions.py  ip.py  simulation.py  switch.py  utils.py
nesim/devices/: __init__.py  cable.py  device.py  error_detection.py  frame_sender.py  host.py  hub.py  ip_packet_sender.py  multiple_port_device.py  router.py  send_receiver.py  switch.py  utils.py
netsim/: __init__.py  __main__.py  devices.py  inst_parser.py  instructions.py  main.py  simulation.py
