[tool.poetry]
name = "NetSim"
version = "0.0.1"
description = ""
authors = [
    "Jorge Morgado Vega <jorge.morgadov@gmail.com>",
    "Roberto García Rodríguez <roberto.garcia@estudiantes.matcom.uh.cu>"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
