[tool.poetry]
name = "nesim"
version = "0.0.4"
description = "Paquete de python que permite simular de una red de computadoras."
authors = [
    "Jorge Morgado Vega <jorge.morgadov@gmail.com>",
    "Roberto García Rodríguez <roberto.garcia@estudiantes.matcom.uh.cu>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jmorgadov/nesim"
repository = "https://github.com/jmorgadov/nesim"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
